Fixes reservations overflow height, uses default button color for all Load More buttons, fixes font-icon classes

--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -166,9 +166,9 @@ $sans-font:                       "Helvetica Neue", HelveticaNeue, Roboto, "Open
 .icon-filter:before               { content: "\e90e"; }
 .icon-preview_eye:before          { content: "\e90f"; }
 .icon-sort_triangles:before       { content: "\e910"; }
-.icon-triangle_down_bg:before     { content: "\e911"; }
-.icon-triangle_up_big:before      { content: "\e912"; }
-.icon-triangle_right_sm:before    { content: "\e913"; }
+.icon-triangle_down:before        { content: "\e911"; }
+.icon-triangle_up:before          { content: "\e912"; }
+.icon-triangle_right:before       { content: "\e913"; }
 
 
 
