--- a/client/app/main/reservations/reservations.scss
+++ b/client/app/main/reservations/reservations.scss
@@ -6,6 +6,7 @@
     .arrows                       { color: $blue; font-size: 22px; }
     .today                        { color: $darkgray; font-weight: 700; letter-spacing: -1px; }
   }
+  .reservations-body              { height: calc(100% - 43px); }
 
   // body stuff
   .calendar                       { background: $white; height: 100%; overflow: auto;
@@ -82,7 +83,7 @@
   }
   // WEEK VIEW: tab specifics
   .week-view                      {
-    .overflow                     { height: 400px; overflow: auto; } // TODO: set flexible height
+    .overflow                     { height: calc(100% - 71px); overflow: auto; }
     .table                        { color: $lightgray; margin-bottom: 0; position: relative;
       .th, .td                    { border-bottom: 1px solid $lightgray; border-right: 1px solid $lightgray; height: 35px; padding: 0;
         &:first-child             { padding-right: 8px; text-align: right; width: 60px; }
